src/objects/Internal_Support__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Silver Partner User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Platform User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Please provide the reason why you created the request</inlineHelpText>
        <label>Reason</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Profile Update</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_time__c</fullName>
        <label>Requested time</label>
        <picklist>
            <picklistValues>
                <fullName>1 Hour</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Internal Support</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REQ- {0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>